tests/errors/expression-expected/main.pa
# A def body that begins with a token that cannot start an expression.
def main = * 2
